# cppserver-website

./: CMakeLists.txt  LICENSE  README.md  ROADMAP.md  TODO.md  main.cpp
.github/: copilot-instructions.md
include/: database.hpp  devices.hpp  httpdatahandler.hpp
internal/: index.html  style.css  ui.js
public/: index.html
public/about/: index.html
public/blog/: index.html  post-template.html  post1.html  post2.html
public/scripts/: test.js
public/styles/: main.css
src/: database.cpp  devices.cpp  httpdatahandler.cpp
